--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
         <div class="jumbotron welcome">
             <h1>欢迎使用博客系统</h1>
             <p>注册并登录以获取完整使用体验</p>
+            <p class="iconfont text-muted">测试账号 (&nbsp;&#xe62f;:&nbsp;test&nbsp;&nbsp;&#xe627;:&nbsp;123456&nbsp;)</p>
             <p><span id="welcome-btn" class="btn btn-primary btn-lg">我知道了</span></p>
         </div>
     {% endif %}
