--- a/templates/base0.html
+++ b/templates/base0.html
@@ -7,6 +7,7 @@
     {% block title %}
         <!-- 标题 -->
     {% endblock %}
+    <link href="/static/blog/home.css" rel="stylesheet">
     <link href="/static/blog/reset.css" rel="stylesheet">
     <link href="/static/blog/auth.css" rel="stylesheet">
     <link href="/static/blog/article.css" rel="stylesheet">
@@ -24,6 +25,9 @@
     {% block body %}
         <!-- 页面主体 -->
     {% endblock %}
+    <div class="go-top">
+        <a href="#">Top</a>
+    </div>
 </div>
 </body>
 </html>
