--- a/templates/parts/header.html
+++ b/templates/parts/header.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <!-- logo + 博客系统 -->
         <div class="navbar-header">
-            <a class="navbar-brand iconfont" href="/home/">&#xe62e; 博客系统</a>
+            <a class="navbar-brand iconfont" href="/home/">&#xe62e; 博客系统（demo）</a>
         </div>
         <!-- 用户登录状态 -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
