--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base0.html" %}
 
 {% block title %}
-    <title>博客系统（demo）</title>
+    <title>简易博客系统（demo）</title>
 {% endblock %}
 
 {% block body %}
