--- a/templates/parts/side-right.html
+++ b/templates/parts/side-right.html
@@ -2,8 +2,8 @@
 {% if request.user.is_anonymous %}
     <div class="side-right-header">
         <span class="center-block text-center h3">博客系统</span>
-        <span class="center-block text-center  text-muted">Web开发爱好者交流学习的社区</span>
-        <span class="center-block text-center  text-muted">欢迎加入！</span>
+        <span class="center-block text-center text-muted">DEMO演示版</span>
+        <span class="center-block text-center text-muted">测试账号:test 密码:123456</span>
         <a href="#" data-toggle="modal" data-target=".login-modal" class="auth">
             <span class="btn btn-info center-block text-center btn-login">登录</span>
         </a>
