--- a/templates/base0.html
+++ b/templates/base0.html
@@ -12,13 +12,13 @@
     <link href="/static/blog/auth.css" rel="stylesheet">
     <link href="/static/blog/article.css" rel="stylesheet">
     <link href="/static/blog/fonts/fonts.css" rel="stylesheet">
-    <link href="/static/blog/bootstrap/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
-    <script src="/static/blog/jquery/jquery-3.1.1.min.js"></script>
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="/static/blog/jquery/jquerysession.js"></script>
-    <script src="/static/blog/bootstrap/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/static/blog/auth.js"></script>
     <script src="/static/blog/article.js"></script>
-    <script charset="utf-8" src="/static/blog/kindeditor/kindeditor-all.js"></script>
+    <script charset="utf-8" src="/static/blog/kindeditor/kindeditor-all-min.js"></script>
 </head>
 <body>
 <div class="container">
