--- a/static/blog/auth.css
+++ b/static/blog/auth.css
@@ -77,15 +77,17 @@
 /* 动画 */
 .btn, .btn:hover, a, a:hover {
     /*transition: 0.3s all cubic-bezier(.46, 1, .23, 1.52) !important;*/
-    transition: 0.4s all;
+    transition: all .3s ease-in-out;
 }
-.article-item{
-    transition: 0.4s all;
+
+.article-item {
+    transition: all .3s ease-in-out;
 }
-.article-item:hover{
+
+.article-item:hover {
     /*background-color: rgba(240,240,240,0.4)!important;*/
     /*opacity: 0.9;*/
-    transform: translateY(-1px);
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    transition: 0.4s all;
+    transform: translateX(5px);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: all .3s ease-in-out;
 }
