--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
                     <div class="col-md-3">
                         <div class="view-img">
                             <a href="/{{ article.user.username }}/articles/{{ article.id }}">
-                                <img src="/static/blog/image/blog.png" height="130">
+                                <img src="/media/{{ article.user.avatar }}" height="130">
                             </a>
                         </div>
                     </div>
