--- a/templates/parts/side-left-manager.html
+++ b/templates/parts/side-left-manager.html
@@ -3,7 +3,7 @@
     <span class="h3 text-muted center-block text-center">{{ blog_site.title }}</span>
 </a>
 <!-- 操作栏 -->
-<div class="panel panel-success">
+<div class="panel panel-warning">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" href="#collapseOne">
