--- a/templates/user-blog.html
+++ b/templates/user-blog.html
@@ -21,7 +21,7 @@
         <hr>
         <div class="article-list">
             {% for article in current_page %}
-                <div class="article-item clearfix bg-warning">
+                <div class="article-item clearfix bg-info">
                     <div class="col-md-12">
                         <div class="media-right view-title">
                             <p>
