--- a/static/blog/article.css
+++ b/static/blog/article.css
@@ -82,6 +82,7 @@
     height: 180px;
     border: 1px solid #e3e3e3;
     border-radius: 20px;
+    background-color: #f7f7f7;
 }
 
 .side-right-header .btn-login {
