--- a/static/blog/reset.css
+++ b/static/blog/reset.css
@@ -16,36 +16,56 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
+    background-color: #ECECED!important;
 }
+
 ol, ul, li {
-	list-style: none;
+    list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
+
 a, a:hover {
-    text-decoration: none!important;
+    color: #333333!important;
+    text-decoration: none !important;
+}
+a:hover{
+    color: #F5810A!important;
+}
+
+.navbar-default {
+    background-color: #dedede!important;
+    border-color: #dedede!important;
+}
+.bg-info{
+    background-color: #f7f7f7!important;
 }
