--- a/templates/user-article-manager.html
+++ b/templates/user-article-manager.html
@@ -21,7 +21,7 @@
         <hr>
         <table class="table table-striped table-hover">
             <thead>
-            <tr class="success text-muted">
+            <tr class="warning text-muted">
                 <th>标题</th>
                 <th>日期</th>
                 <th>评论数</th>
