--- a/static/blog/article.css
+++ b/static/blog/article.css
@@ -9,6 +9,17 @@
 .welcome, .welcome-login {
     display: none;
 }
+.welcome h1 {
+    color: #fff!important;
+    text-shadow: rgba(1,1,1,0.35) 1px 1px 20px;
+}
+.welcome p {
+    color: #fff;
+    text-shadow: rgba(1,1,1,0.6) 1px 1px 30px;
+}
+.welcome p span{
+    text-shadow: none;
+}
 
 /* 主页 */
 .article-list {
