--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
     </div>
     <!-- 欢迎页 -->
     {% if request.session.welcome == 'first' %}
-        <div class="jumbotron welcome">
+        <div class="jumbotron welcome" style="background: url('/static/blog/image/banner.jpg') center top;">
             <h1>欢迎使用博客系统</h1>
             <p>注册并登录以获取完整使用体验</p>
             <p class="iconfont text-muted">测试账号 (&nbsp;&#xe62f;:&nbsp;test&nbsp;&nbsp;&#xe627;:&nbsp;123456&nbsp;)</p>
