--- a/templates/base0.html
+++ b/templates/base0.html
@@ -7,6 +7,8 @@
     {% block title %}
         <!-- 标题 -->
     {% endblock %}
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/static/favicon.ico">
     <link href="/static/blog/home.css" rel="stylesheet">
     <link href="/static/blog/reset.css" rel="stylesheet">
     <link href="/static/blog/auth.css" rel="stylesheet">
@@ -30,4 +32,12 @@
     </div>
 </div>
 </body>
+<script>
+    console.log(`
+博客园：https://www.cnblogs.com/xiangjianan/
+
+微信：inMyLife2021
+
+`);
+</script>
 </html>
