--- a/templates/base0.html
+++ b/templates/base0.html
@@ -34,8 +34,12 @@
 </body>
 <script>
     console.log(`
-博客园：https://www.cnblogs.com/xiangjianan/
+Email :\tXJN9872@163.com
 
-`);
+WeChat:\tinMyLife2021
+
+Page  :\twww.helloxjn.com
+
+`);h
 </script>
 </html>
