--- a/templates/base0.html
+++ b/templates/base0.html
@@ -34,11 +34,11 @@
 </body>
 <script>
     console.log(`
-Email :\tXJN9872@163.com
+GitHub: https://github.com/xiangjianan
 
-WeChat:\tinMyLife2021
+Email: xiang9872@gmail.com
 
-Page  :\twww.helloxjn.com
+Page: www.helloxjn.com
 
 `);
 </script>
