--- a/templates/user-article-manager.html
+++ b/templates/user-article-manager.html
@@ -19,9 +19,9 @@
     <div class="col-md-9">
         <span class="text-muted">文章管理</span>
         <hr>
-        <table class="table table-striped table-hover">
+        <table class="table table-hover">
             <thead>
-            <tr class="warning text-muted">
+            <tr class="text-muted">
                 <th>标题</th>
                 <th>日期</th>
                 <th>评论数</th>
