--- a/static/blog/article.css
+++ b/static/blog/article.css
@@ -96,7 +96,7 @@
     height: 180px;
     border: 1px solid #e3e3e3;
     border-radius: 20px;
-    background-color: #f1f5f8;
+    background-color: rgba(255,255,255,0.45);
 }
 
 .side-right-header .btn-login {
