--- a/templates/base0.html
+++ b/templates/base0.html
@@ -8,7 +8,7 @@
         <!-- 标题 -->
     {% endblock %}
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="/static/favicon.ico">
+    <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
     <link href="/static/blog/home.css" rel="stylesheet">
     <link href="/static/blog/reset.css" rel="stylesheet">
     <link href="/static/blog/auth.css" rel="stylesheet">
